--- a/redis-test/index.html
+++ b/redis-test/index.html
@@ -155,7 +155,7 @@
                 </div>
               </section>
 
-              <section class="slide slide-seven">
+              <section id="7" class="slide slide-seven">
                 <div class="slide-container photo-wrapper">
                     <figure class="photo2">
                         <img src="img/photo-2.jpg" width="330" height="450" alt="Брускетты">
@@ -185,9 +185,9 @@
                         </li>
                     </ul>
                 </div>
-
               </section>
-              <section class="slide slide-eight">
+                
+              <section id="8" class="slide slide-eight">
                   <div class="slide-container">
                       <div class="text-container">
                         <h2>Приготовь свою<br>окрошку</h2>
@@ -233,7 +233,7 @@
                     </div>
               </section>
 
-              <section class="slide slide-nine">
+              <section id="9" class="slide slide-nine">
                   <div class="slide-container">
                     <p class="pink-heading">Приятного<br>аппетита!</p>
                   </div>
