--- a/redis-test/index.html
+++ b/redis-test/index.html
@@ -97,7 +97,8 @@
                       <article>
                           <span class="standart">Стандарт</span>
                           <picture class="image-standart">
-                            <img src="img/redis-standart.png" srcset="img/redis-standart@2x.png 2x">
+                            <source media="(min-width: 1800px)" srcset="img/redis-standart-large.png">
+                            <img src="img/redis-standart-mobile.png" srcset="img/redis-standart-mobile@2x.png 2x">
                           </picture>
                           <h3>Жара</h3>
                         <p>Корнеплод раннеспелого редиса. Отличиется округлостью<br>формы и массой 30г. По цвету - это красный овощ. Мякоть<br>белая и отличается сочностью. По вкусу не имеет горечи.</p>
@@ -106,7 +107,8 @@
                         <span class="premium">Премиум</span>
                         <div>
                           <picture class="image-premium">
-                            <img src="img/redis-premium.png" srcset="img/redis-premium@2x.png 2x">
+                            <source media="(min-width: 1800px)" srcset="img/redis-premium-large.png">
+                            <img src="img/redis-premium-mobile.png" srcset="img/redis-premium-mobile@2x.png 2x">
                           </picture>
                         </div>
                         <h3>Французский завтрак</h3>
