--- a/redis-test/index.html
+++ b/redis-test/index.html
@@ -96,22 +96,22 @@
                   <div class="slide-container">
                       <article>
                           <span class="standart">Стандарт</span>
-                          <picture class="image-standart">
+                          <picture>
                             <source media="(min-width: 1800px)" srcset="img/redis-standart-large.png">
                             <img src="img/redis-standart-mobile.png" srcset="img/redis-standart-mobile@2x.png 2x">
                           </picture>
-                          <h3>Жара</h3>
+                          <h3 class="redis-standart">Жара</h3>
                         <p>Корнеплод раннеспелого редиса. Отличиется округлостью<br>формы и массой 30г. По цвету - это красный овощ. Мякоть<br>белая и отличается сочностью. По вкусу не имеет горечи.</p>
                       </article>
                       <article>
                         <span class="premium">Премиум</span>
                         <div>
-                          <picture class="image-premium">
+                          <picture>
                             <source media="(min-width: 1800px)" srcset="img/redis-premium-large.png">
                             <img src="img/redis-premium-mobile.png" srcset="img/redis-premium-mobile@2x.png 2x">
                           </picture>
                         </div>
-                        <h3>Французский завтрак</h3>
+                        <h3 class="redis-premium">Французский завтрак</h3>
                         <p>Скороспелый гибрид массой 15-20г. Корнеплод продолговатой<br>формы, малинового цвета снаружи и белого окраса мякоти. По вкусу имеет легкую ноту остроты.</p>
                       </article>
                   </div>
