--- a/redis-test/index.html
+++ b/redis-test/index.html
@@ -267,7 +267,7 @@
           </main>
           <footer>
             <div class="test"></div>
-              <a href="#3" class="button-next">Листать   
+              <a class="button-next">Листать   
                 <svg xmlns="http://www.w3.org/2000/svg" width="73.5" height="9" viewBox="0 0 73.5 9">
                     <defs>
                       <style>
